Anchor hiding behind header - fixed

--- a/css/main.css
+++ b/css/main.css
@@ -314,6 +314,12 @@ span.incode {
 }
 
 
+/*For #id clickable links*/
+#main .anchor{
+    height: var(--header-height);
+    margin-top: calc(var(--header-height) * -1);
+    visibility: hidden;
+}
 
 
 
